# multimodalDocumentUnderstanding

./: .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  mlflow.db  pyproject.toml
configs/: benchmark_config.yaml  benchmark_config2.yaml  dataset_config.yaml  mitigation_config.yaml  siglip_classifier_config.yaml  siglip_classifier_cross_attention_config.yaml
data/corrupted/: docvqa_corrupted.json  mp_docvqa_corrupted.json
docs/superpowers/plans/: 2026-06-05-microservices-fastapi.md  2026-06-06-observability.md  2026-06-06-vllm-symmetric-pools.md  2026-06-11-mlflow-tracking.md  2026-06-12-rag-mitigation.md  2026-06-18-siglip-classifier.md
docs/superpowers/specs/: 2026-06-05-microservices-fastapi-design.md  2026-06-06-observability-design.md  2026-06-06-vllm-backend-design.md  2026-06-11-mlflow-tracking-design.md  2026-06-12-rag-mitigation-design.md  2026-06-17-finetuning-2gpus-design.md  2026-06-18-siglip-classifier-design.md
envFiles/: .env.gemma  .env.lfm25  .env.minicpm  .env.qwen2.5  .env.qwen3  .env.qwen3.5
env_files/: .env.gemma  .env.qwen2.5  .env.qwen3.5
observability/: prometheus.yml
results/: explored_samples_summary.json  merged_final_explored_metrics.json  test_ids.json
results/benchmark/: siglip_classifier_benchmark_result.json  siglip_classifier_cross_attention_benchmark_result.json  test_metrics.json  vllm:Qwen_Qwen2.5-VL-7B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3-VL-4B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3.5-2B_benchmark_result.json
results/benchmark_docvqa/: vllm:Qwen_Qwen2.5-VL-7B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3-VL-4B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3.5-2B_benchmark_result.json  vllm:google_gemma-4-E2B-it_benchmark_result.json
results/benchmark_docvqa_2/: vllm:google_gemma-4-E2B-it_benchmark_result.json
results/benchmark_mp_docvqa/: vllm:Qwen_Qwen2.5-VL-7B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3-VL-4B-Instruct_benchmark_result.json  vllm:Qwen_Qwen3.5-2B_benchmark_result.json  vllm:google_gemma-4-E2B-it_benchmark_result.json
results/mitigation_Qwen3-VL-4B/: few_shot_checkpoint.json  mitigation_results.json  rag_bm25_checkpoint.json  rag_dense_checkpoint.json  rag_hybrid_checkpoint.json
results/mitigation_docvqa/: vllm:google_gemma-4-E2B-it_nothink_benchmark_result.json
results/mitigation_gemma4/: few_shot_checkpoint.json  mitigation_results.json  rag_bm25_checkpoint.json  rag_dense_checkpoint.json  rag_hybrid_checkpoint.json
results/mitigation_mp_docvqa/: baseline_subset_results.json  mitigation_results.json  mitigation_subset_ids.json  vllm:google_gemma-4-E2B-it_nothink_benchmark_result.json
results/mitigation_qwen2.5-vl/: few_shot_checkpoint.json  mitigation_results.json  mitigation_subset_ids.json  rag_bm25_checkpoint.json  rag_dense_checkpoint.json  rag_hybrid_checkpoint.json
results/mitigation_qwen3.5/: few_shot_checkpoint.json  mitigation_results.json  no_think_test_metrics.json  rag_bm25_checkpoint.json  rag_dense_checkpoint.json  rag_hybrid_checkpoint.json
scripts/: make_report_figures.py
services/api-gateway/: Dockerfile  main.py
services/api-gateway/tests/: test_api_gateway.py
services/document-svc/: Dockerfile  indexer.py  main.py  search.py
services/document-svc/tests/: test_document_svc.py
services/evaluation-svc/: Dockerfile  judge.py  main.py  rag_scorer.py
services/evaluation-svc/tests/: test_evaluation_svc.py
services/job-runner/: Dockerfile  main.py  state.py
services/job-runner/jobs/: benchmark.py  corrupt.py  index.py  mitigation.py
services/job-runner/tests/: test_job_runner.py
services/model-gateway/: Dockerfile  clients.py  main.py  pool.py
services/model-gateway/tests/: test_model_gateway.py
services/shared/: observability.py
services/shared/tests/: test_observability.py
services/vllm-worker/: Dockerfile
src/: env.py
src/benchmark/: metrics_for_subset.py  run_benchmark.py  train_classifier.py
src/benchmark/evaluation/: metrics.py
src/benchmark/models/: base_model.py  google_model.py  llama_cpp_model.py  mistral_model.py  openrouter_model.py  siglip_classifier.py  vllm_model.py
src/dataset/: download.py  pipeline.py  prepare_benchmark.py
src/dataset/corruption/: base_corruptor.py  element_corruptor.py  layout_corruptor.py  nlp_entity_corruptor.py
src/dataset/loaders/: base_loader.py  docvqa_loader.py  dude_loader.py  mp_docvqa_loader.py
src/dataset/quality_check/: llm_judge.py
src/mitigation/: evaluation.py  registry.py  run_mitigation.py
src/mitigation/strategies/: base.py  chain_of_thought.py  few_shot.py  finetuning.py  knowledge_injection.py  rag.py
tests/: test_generate.py  test_mitigation_refactor.py  test_mlflow_tracking.py  test_rag.py  test_run_benchmark_siglip_backend.py  test_siglip_classifier.py  test_train_classifier.py
tests/integration/: test_e2e_smoke.py
