[project]
name = "multimodal-doc-understanding"
version = "0.1.0"
description = "Vision LLM benchmark for unanswerable question detection from multimedia documents"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "datasets>=2.18.0",
    "pandas>=2.0",
    "pdf2image>=1.17",
    "pypdf>=4.0",
    "pydantic-ai>=1.0.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "spacy>=3.7",
]
services = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "redisvl>=0.2",
    "sentence-transformers>=3.0",
    "fakeredis>=2.20",
    "pytest-asyncio>=0.23",
    "pytest>=8.0",
]
# GPU machine required; install unsloth separately per https://github.com/unslothai/unsloth
finetune = [
    "trl>=0.12.0",
    "datasets>=2.18.0",
]

[project.scripts]
download-data   = "src.dataset.download:main"
corrupt-dataset = "src.dataset.pipeline:main"
run-benchmark   = "src.benchmark.run_benchmark:main"
run-mitigation  = "src.mitigation.run_mitigation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
