[project]
name = "multimodal-doc-understanding"
version = "0.1.0"
description = "Vision LLM benchmark for unanswerable question detection from multimedia documents"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "datasets>=2.18.0",
    "pandas>=2.0",
    "pdf2image>=1.17",
    "pypdf>=4.0",
    "pydantic-ai>=1.0.0",
    "langchain-core>=0.3.0",
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "mlflow>=2.13",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "spacy>=3.7",
]
services = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "redisvl>=0.2",
    "sentence-transformers>=3.0",
    "fakeredis>=2.20",
    "pytest-asyncio>=0.23",
    "pytest>=8.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "prometheus-fastapi-instrumentator>=6.1",
    "prometheus-client>=0.19",
]
mitigation = [
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
]
vit-classifier = [
    "torch>=2.2",
    "transformers>=4.40",
    "scikit-learn>=1.4",
]
# GPU machine required; install unsloth separately per https://github.com/unslothai/unsloth
finetune = [
    "trl>=0.12.0",
    "datasets>=2.18.0",
]

[project.scripts]
download-data   = "src.dataset.download:main"
corrupt-dataset     = "src.dataset.pipeline:main"
corrupt-all-datasets = "src.dataset.pipeline:main_all"
prepare-benchmark = "src.dataset.prepare_benchmark:main"
run-benchmark   = "src.benchmark.run_benchmark:main"
run-mitigation  = "src.mitigation.run_mitigation:main"
load-env        = "src.env:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
# Default discovery: only tests/ (integration tests).
# Run per-service tests explicitly:
#   PYTHONPATH=. uv run pytest services/evaluation-svc/tests/
#   PYTHONPATH=. uv run pytest services/model-gateway/tests/
#   PYTHONPATH=. uv run pytest services/document-svc/tests/
#   PYTHONPATH=. uv run pytest services/job-runner/tests/
#   PYTHONPATH=. uv run pytest services/api-gateway/tests/
# Running all services/ together causes module-name conflicts (each has main.py).
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
